#8 - Fix more layout bugs.

--- a/frontend/src/components/Patient.less
+++ b/frontend/src/components/Patient.less
@@ -1,40 +1,51 @@
 @import '~nav-frontend-core/less/core';
 
-* {
-  margin: 0;
-}
 
-body {
-
-}
-.knapp {
-  margin: 2% 2% 0 0;
-}
-
-.datovelgere {
-  margin: 2% 2% 0 0;
-  padding: 5px 0 5px 0;
-}
-
-.datovelgere{
-  padding-block: 5px;
-}
-.tekstfelt {
-  width: 50%;
-  margin: 0 25% 0 25%;
-}
-.wrapper {
-  grid: 'auto-flow';
-  text-align: left;
-  margin-left: 25%;
+.banner-wrapper {
+  display: inline-flex;
+  text-align: center;
   padding: 15px 0 15px 0;
+  margin: 0 2% 0 2%;
 }
+
+/*.banner-wrapper {
+  display: flex;
+  justify-content: space-between;
+  padding: 15px 0 15px 0;
+  width: 30%;
+  margin: 0 30% 0 40%;
+} */
 
 .birthnr-wrapper{
   display: flex;
   align-items: center;
+  padding: 0 2% 0 2%;
 }
 
-#birthnr {
-  // TODO: Add styling;
+.name-wrapper{
+  display: flex;
+  align-items: center;
+  padding: 0 2% 0 2%;
 }
+
+.tekstfelt {
+  width: 70%;
+}
+
+.datepicker-wrapper{
+  text-align: center;
+}
+
+.datepicker{
+  margin: 0 2% 0 2% !important;
+  padding: 50px 0 50px 0;
+}
+
+.button-wrapper{
+  text-align: center;
+}
+
+.button {
+  margin: 0 2% 0 2%;
+}
+
